# KeyManager

./: .gitignore  KeyManager.slnx  README.kr.md  README.md  handoff.md  publish.ps1
.claude/agents/: backend.md  i18n.md  misc.md  winform.md
.codex/agents/: backend.toml  i18n.toml  misc.toml  winform.toml
docs/: Roadmap.md  agents.md  developmentpurpose.md  tcp-architecture.en.md  tcp-architecture.md  개발목적.md
release/KeyManager.App/: KeyManager.App.deps.json
release/KeyManager.MasterGui/: KeyManager.MasterGui.deps.json
release/KeyManager.Server/: KeyManager.Server.deps.json  KeyManager.Tray.deps.json
release/sdk-python/: pyproject.toml
release/sdk-python/examples/: sample_client.py
samples/KeyManager.SampleClient/: KeyManager.SampleClient.csproj  Program.cs
sdk/python/: README.md
src/KeyManager.App/: AppPaths.cs  AppSettings.cs  ChangeMasterPasswordForm.cs  DescriptionForm.cs  Dialogs.cs  KeyManager.App.csproj  KeyTreeBuilder.cs  LanguageSelectForm.cs  Loc.cs  MainForm.cs  MasterPasswordForm.cs  Program.cs  TrayContext.cs
src/KeyManager.Client/: KeyManager.Client.csproj  KeyManagerClient.cs
src/KeyManager.Core/: BrokerService.cs  KeyAccess.cs  KeyManager.Core.csproj  MasterServerConnection.cs  PipeBrokerServer.cs  VaultStore.cs
src/KeyManager.MasterGui/: ConnectingForm.cs  ConnectionSetupForm.cs  KeyManager.MasterGui.csproj  MasterAppContext.cs  MasterSettings.cs  Program.cs
src/KeyManager.Protocol/: Framing.cs  ProtocolConstants.cs  TlsSupport.cs  TransportCrypto.cs  VaultWireMessages.cs  WireMessages.cs
src/KeyManager.Server/: Program.cs  (+5 more)
(+27 files in other folders)
