[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keymanager-sdk"
version = "1.0.0"
description = "KeyManager 소비 앱용 Python SDK (TCP 버전) — C# KeyManager.Client와 와이어 호환"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "cryptography>=41.0",
]

[project.urls]
Repository = "https://github.com/"

[tool.hatch.build.targets.wheel]
packages = ["keymanager"]
